--- a/campusjobs/src/main/res/values/strings.xml
+++ b/campusjobs/src/main/res/values/strings.xml
@@ -1,1 +1,4 @@
-<resources></resources>
+<resources>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+</resources>
