--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <string name="title_activity_update_password">UpdatePasswordActivity</string>
     <string name="title_activity_update_mobile">UpdateMobileActivity</string>
     <string name="title_activity_personal_inbox_detail">PersonalInboxDetailActivity</string>
+    <string name="title_activity_register">RegisterActivity</string>
 
 </resources>
