--- a/bluecollar/src/main/res/values/strings.xml
+++ b/bluecollar/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_add_trend">AddTrendActivity</string>
+    <string name="title_activity_make_friend_personal_info">MakeFriendPersonalInfoActivity</string>
 </resources>
