--- a/bluecollar/src/main/res/values/strings.xml
+++ b/bluecollar/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_add_trend">AddTrendActivity</string>
     <string name="title_activity_make_friend_personal_info">MakeFriendPersonalInfoActivity</string>
+    <string name="title_activity_trend_detail">TrendDetailActivity</string>
 </resources>
